misc fixes and whitespace cleanup

--- a/component.css
+++ b/component.css
@@ -10,7 +10,7 @@
   font-size: font-size: 1.6rem;
   font-family: "FiraSans", sans-serif;
   padding: .5rem 0rem;
-  background: #DDD;
+  background: #0Da;
   color: #666;
 }
 
